--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -1,26 +1,46 @@
-# This is a basic workflow to help you get started with Actions
 
-name: experiment
-
-# Controls when the workflow will run
+name: interactive
+# https://github.community/t/self-hosted-not-using-bashrc/18358
+defaults:
+  run:
+    shell: bash -ieo pipefail {0}
 on:
- # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+concurrency:
+  group: ci-tests-${{ github.ref }}-1
+  cancel-in-progress: true
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    #runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: _getMinimal_cloud
+      #$RUNNER_WORKSPACE
+      #sudo touch /continue
+      #bash -i
+      run: |
+        ./ubiquitous_bash.sh _getMinimal_cloud
+      timeout-minutes: 45
+    #- name: hook: .bash_profile
+      #run: |
+      #  echo '. ~/.bashrc' > ~/.bash_profile
+      # https://github.com/marketplace/actions/debugging-with-tmate
+      #$RUNNER_WORKSPACE
+      #sudo touch /continue
+      #bash -i
+      # Type 'q' at the 'Web shell' or use SSH .
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      #ssh -i <path-to-key> <tmate-connection-string>
+      #with:
+        #limit-access-to-actor: true
+      timeout-minutes: 90
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo experiment
-          ./ubiquitous_bash.sh _messagePlain_probe experiment
+
+
+
+
+
