--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -19,19 +19,20 @@ jobs:
     - uses: actions/checkout@v2
     - name: _getMinimal_cloud
       #$RUNNER_WORKSPACE
-      #sudo touch /continue
-      #bash -i
       run: |
         ./ubiquitous_bash.sh _getMinimal_cloud
       timeout-minutes: 45
     #- name: hook: .bash_profile
       #run: |
-      #  echo '. ~/.bashrc' > ~/.bash_profile
-      # https://github.com/marketplace/actions/debugging-with-tmate
-      #$RUNNER_WORKSPACE
-      #sudo touch /continue
-      #bash -i
-      # Type 'q' at the 'Web shell' or use SSH .
+        #echo '. ~/.bashrc' > ~/.bash_profile
+    #- name: bashrc
+      #run: |
+        #source ~/.bashrc
+    # https://github.com/marketplace/actions/debugging-with-tmate
+    #$RUNNER_WORKSPACE
+    #sudo touch /continue
+    #bash -i
+    # Type 'q' at the 'Web shell' or use SSH .
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
       #ssh -i <path-to-key> <tmate-connection-string>
