--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -3,7 +3,7 @@ name: interactive
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5 1 * * 6'
+    #- cron: '5 1 * * 6'
     #- cron: '5 1 * * 6,2,4'
 
 concurrency:
@@ -28,7 +28,7 @@ jobs:
     #- name: _build_cloud
       #run: |
         #./ubiquitous_bash.sh _build_cloud
-        #timeout-minutes: 330
+      #timeout-minutes: 330
     # https://github.com/marketplace/actions/debugging-with-tmate
     # $RUNNER_WORKSPACE
     # sudo touch /continue
