--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -53,7 +53,7 @@ jobs:
         RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
       run: |
         #true "$RCLONE_CONF"
-        echo "$RCLONE_CONF" > /rclone.conf
+        echo "$RCLONE_CONF" | sudo -n tee /rclone.conf > /dev/null
       timeout-minutes: 5
     # https://github.com/marketplace/actions/debugging-with-tmate
     # $RUNNER_WORKSPACE
