--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     machine:
       image: ubuntu-2004:current
     #resource_class: large
-    resource_class: small
+    resource_class: medium
     steps:
       - checkout
       - run:
@@ -12,15 +12,15 @@ jobs:
           #shell: /bin/bash -eo pipefail
           command: |
             ./ubiquitous_bash.sh _getMinimal_cloud
-        when: always
+          when: always
       - run:
           name: _fetchKernel
           command: |
             ./ubiquitous_bash.sh _fetchKernel
       #- run:
-        #name: _build_cloud
-        #command: |
-          #./ubiquitous_bash.sh _build_cloud
+          #name: _build_cloud
+          #command: |
+            #./ubiquitous_bash.sh _build_cloud
       - run:
           name: _export_cloud
           command: |
