--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,11 @@
 workflows:
   version: 2
   build:
-    triggers:
-      -schedule:
+    jobs:
+      - build:
         filters:
           branches:
-            ignore:
-              - main
-    jobs:
-      - build
+            ignore: /.*/
 
 
 jobs:
