--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,11 @@
 
+# https://discuss.circleci.com/t/branch-filtering-ignore/24301
+workflows:
+  version: 2
+  all:
+    jobs:
+      - build:
+
 
 jobs:
   build:
