--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ workflows:
   all:
     jobs:
       - build:
+          filters:
+            branches:
+              only: main
+              #ignore: /.*/
 
 
 jobs:
