--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,12 @@ workflows:
           filters:
             branches:
               only: main
+              ignore:
+                - /pull.*/
+                - /push.*/
               #ignore: /.*/
-              ignore: /pull.*/
-              ignore: /push.*/
+              #ignore: /pull.*/
+              #ignore: /push.*/
 
 
 jobs:
