--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ workflows:
       - build:
           filters:
             branches:
-              #only: /^doNotMatch/
-              only: main
+              only: /^doNotMatch/
+              #only: main
               #ignore:
                 #- /.*/
                 #- /pull.*/
