--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ workflows:
   build:
     when:
       condition:
-          - << pipeline.parameters.build >>
+          - equal: [ true, << pipeline.parameters.build >> ]
     jobs:
       - onBuild:
           filters:
