--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 
 version: 2.1
 parameters:
-  build:
+  goBuild:
     type: string
     default: "false"
 
@@ -30,7 +30,7 @@ workflows:
   build:
     when:
       condition:
-          - equal: [ "true", << pipeline.parameters.build >> ]
+          - equal: [ "true", << pipeline.parameters.goBuild >> ]
     jobs:
       - onBuild:
           filters:
