--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,23 +28,19 @@ workflows:
     #jobs:
       #- onBuild
   build:
-    when:
-      condition:
-          - equal: [ "false", << pipeline.parameters.goBuild >> ]
-      steps:
-        jobs:
-          - onBuild:
-              filters:
-                branches:
-                  #only: /^doNotMatch/
-                  only: main
-                  #ignore:
-                    #- /.*/
-                    #- /pull.*/
-                    #- /push.*/
-                  #ignore: /.*/
-                  #ignore: /pull.*/
-                  #ignore: /push.*/
+    jobs:
+      - onBuild:
+          filters:
+            branches:
+              #only: /^doNotMatch/
+              only: main
+              #ignore:
+                #- /.*/
+                #- /pull.*/
+                #- /push.*/
+              #ignore: /.*/
+              #ignore: /pull.*/
+              #ignore: /push.*/
 
 
 jobs:
@@ -63,6 +59,9 @@ jobs:
       image: ubuntu-2004:current
     #resource_class: large
     resource_class: medium
+    when:
+      condition:
+          - equal: [ "true", << pipeline.parameters.goBuild >> ]
     steps:
       - checkout
       - run:
