--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,13 @@ workflows:
                 #- main
     #jobs:
       #- onBuild
-  #build:
-    #jobs:
-      #- onBuild:
-          #filters:
-            #branches:
+  build:
+    jobs:
+      - onBuild:
+          filters:
+            branches:
               #only: /^doNotMatch/
-              #only: main
+              only: main
               #ignore:
                 #- /.*/
                 #- /pull.*/
@@ -41,30 +41,6 @@ workflows:
               #ignore: /.*/
               #ignore: /pull.*/
               #ignore: /push.*/
-  build:
-    when:
-      condition:
-          - equal: [ "true", << pipeline.parameters.goBuild >> ]
-      steps:
-        - checkout
-        - run:
-            name: _getMinimal_cloud
-            #shell: /bin/bash -eo pipefail
-            command: |
-              ./ubiquitous_bash.sh _getMinimal_cloud
-            when: always
-        - run:
-            name: _fetchKernel
-            command: |
-              ./ubiquitous_bash.sh _fetchKernel
-        #- run:
-            #name: _build_cloud
-            #command: |
-              #./ubiquitous_bash.sh _build_cloud
-        - run:
-            name: _export_cloud
-            command: |
-              ./ubiquitous_bash.sh _export_cloud
 
 
 jobs:
@@ -83,7 +59,30 @@ jobs:
       image: ubuntu-2004:current
     #resource_class: large
     resource_class: medium
-
+    steps:
+      when:
+        condition:
+            - equal: [ "true", << pipeline.parameters.goBuild >> ]
+        steps:
+          - checkout
+          - run:
+              name: _getMinimal_cloud
+              #shell: /bin/bash -eo pipefail
+              command: |
+                ./ubiquitous_bash.sh _getMinimal_cloud
+              when: always
+          - run:
+              name: _fetchKernel
+              command: |
+                ./ubiquitous_bash.sh _fetchKernel
+          #- run:
+              #name: _build_cloud
+              #command: |
+                #./ubiquitous_bash.sh _build_cloud
+          - run:
+              name: _export_cloud
+              command: |
+                ./ubiquitous_bash.sh _export_cloud
 
 
 
