--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,95 +1,40 @@
-
 version: 2.1
+
 parameters:
-  goBuild:
-    type: string
-    default: "false"
+  run_integration_tests:
+    type: boolean
+    default: false
 
-
-
-# https://discuss.circleci.com/t/branch-filtering-ignore/24301
-# https://circleci.com/docs/2.0/workflows/#nightly-example
-# https://circleci.com/docs/2.0/workflows/
-# https://support.circleci.com/hc/en-us/articles/360043638052-Conditional-steps-in-jobs-and-conditional-workflows
-# https://discuss.circleci.com/t/advanced-logic-in-config/36011
-# https://circleci.com/docs/2.0/pipeline-variables/
 workflows:
-  commit:
-    jobs:
-      - onCommit
-  #regular:
-    #triggers:
-      #- schedule:
-          #cron: "0 0 * * *"
-          #filters:
-            #branches:
-              #only:
-                #- main
-    #jobs:
-      #- onBuild
-  build:
+  version: 2
+  integration_tests:
+    when: << pipeline.parameters.run_integration_tests >>
     jobs:
       - onBuild
-        goBuild: "false"
-          filters:
-            branches:
-              #only: /^doNotMatch/
-              only: main
-              #ignore:
-                #- /.*/
-                #- /pull.*/
-                #- /push.*/
-              #ignore: /.*/
-              #ignore: /pull.*/
-              #ignore: /push.*/
-
 
 jobs:
-  onCommit:
-    machine:
-      image: ubuntu-2004:current
+  onBuild:
     steps:
       - checkout
       - run:
-          name: _messagePlain_good nothing
+          name: _getMinimal_cloud
           #shell: /bin/bash -eo pipefail
           command: |
-            ./ubiquitous_bash.sh _messagePlain_good 'good: nothing'
-  onBuild:
-    parameters:
-      goBuild:
-        type: string
-        default: "false"
-    machine:
-      image: ubuntu-2004:current
-    #resource_class: large
-    resource_class: medium
-    steps:
-      when:
-        condition:
-          or:
-          - << pipeline.parameters.goBuild >>
-          - equal: [ master, << pipeline.git.branch >> ]
-        steps:
-          - checkout
-          - run:
-              name: _getMinimal_cloud
-              #shell: /bin/bash -eo pipefail
-              command: |
-                ./ubiquitous_bash.sh _getMinimal_cloud
-              when: always
-          - run:
-              name: _fetchKernel
-              command: |
-                ./ubiquitous_bash.sh _fetchKernel
-          #- run:
-              #name: _build_cloud
-              #command: |
-                #./ubiquitous_bash.sh _build_cloud
-          - run:
-              name: _export_cloud
-              command: |
-                ./ubiquitous_bash.sh _export_cloud
+            ./ubiquitous_bash.sh _getMinimal_cloud
+          when: always
+      - run:
+          name: _fetchKernel
+          command: |
+            ./ubiquitous_bash.sh _fetchKernel
+      #- run:
+          #name: _build_cloud
+          #command: |
+            #./ubiquitous_bash.sh _build_cloud
+      - run:
+          name: _export_cloud
+          command: |
+            ./ubiquitous_bash.sh _export_cloud
+
 
 
 
