--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 parameters:
   run_integration_tests:
     type: boolean
-    default: false
+    default: true
 
 workflows:
   version: 2
